--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- <link rel="stylesheet" href="style.css"> -->
     </head>
     <body>
-        <header class="bg-blue-500">
+        <header class="bg-blue-500 text-shadow-white">
             <h1><i class="fas fa-clock"></i> Focus Timer</h1>
             <p class="tagline">Boost productivity with Pomodoro Technique</p>
         </header>
